[#16484] fix List.of